--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-multiple-pages",
+  "name": "mazai-pc",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -25,6 +25,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "blueimp-md5": "^2.10.0",
     "css-loader": "^1.0.0",
     "fs-extra": "^7.0.0",
     "gulp": "^3.9.1",
@@ -50,8 +51,7 @@
     "art-template": "^4.13.1",
     "chokidar": "^2.0.4",
     "express": "^4.16.3",
-    "express-art-template": "^1.0.1",
-    "less": "^3.8.1"
+    "express-art-template": "^1.0.1"
   },
   "browserslist": [
     "> 1%",
