由webpack负责模板引入js文件的打包编译

--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "dev": "nodemon ./app.js env=development --exec babel-node",
     "sassc-dev": "babel-node scripts/build-sass.js env=development",
     "sassc": "babel-node scripts/build-sass.js",
-    "es6-dev": "babel-node scripts/build-es6.js env=development",
-    "es6": "babel-node scripts/build-es6.js",
     "clean": "babel-node scripts/clean-build.js target=./dist",
-    "build": "npm run clean && npm run build-server && npm run sassc && npm run es6 && npm run build-client",
+    "build": "npm run clean && npm run build-server && npm run sassc && npm run build-client",
     "build-server": "babel ./ -d dist --ignore node_modules,views,scripts,postcss.config.js",
     "build-client": "babel-node ./scripts/build.js target=./dist",
     "start": "node ./dist/app.js",
