--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "babel-node scripts/clean-build.js target=./dist",
     "build": "npm run clean && npm run build-server && npm run sassc && npm run build-client",
     "build-server": "babel ./ -d dist --ignore node_modules,views,scripts,postcss.config.js",
-    "build-client": "babel-node ./scripts/build.js target=./dist",
+    "build-client": "NODE_ENV=production babel-node ./scripts/build.js target=./dist",
     "start": "node ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,6 +27,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "blueimp-md5": "^2.10.0",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "fs-extra": "^7.0.0",
     "gulp": "^3.9.1",
     "ncp": "^2.0.0",
@@ -38,6 +39,7 @@
     "pug-plain-loader": "^1.0.0",
     "sass": "^1.14.3",
     "sass-loader": "^7.1.0",
+    "url-loader": "^1.1.2",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
