增加代码检查功能

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "main": "app.js",
   "scripts": {
+    "precommit": "npm run lint-staged",
     "dev": "concurrently \"npm:node-dev\" \"npm:sassc-dev\"",
     "node-dev": "nodemon ./app.js env=development --exec babel-node",
     "sassc-dev": "babel-node scripts/build-sass.js env=development",
@@ -15,6 +16,13 @@
     "build-client": "NODE_ENV=production babel-node ./scripts/build.js target=./dist",
     "start": "pm2 start ./dist/app.js --name mazai-pc",
     "delete": "pm2 delete mazai-pc",
+    "lint": "eslint --ext .js,.vue app.js views scripts middlewares controllers && npm run lint-style",
+    "lint:fix": "eslint --fix --ext .js,.vue app.js views scripts middlewares controllers && npm run lint-style:fix",
+    "lint-style": "stylelint \"views/**/*.scss\" --syntax scss",
+    "lint-style:fix": "stylelint \"views/**/*.scss\" --syntax scss --fix",
+    "lint-staged": "lint-staged",
+    "lint-staged:js": "eslint --ext .js app.js views scripts middlewares controllers",
+    "prettier": "prettier --write ./views/**/*.js ./views/**/*.scss ./controller/**/*.js ./controller/**/*.scss",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "MNW-FE",
@@ -29,18 +37,30 @@
     "babel-preset-stage-2": "^6.24.1",
     "blueimp-md5": "^2.10.0",
     "css-loader": "^1.0.0",
+    "eslint": "^5.8.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-vue": "^4.7.1",
     "file-loader": "^2.0.0",
     "fs-extra": "^7.0.0",
     "gulp": "^3.9.1",
+    "husky": "^1.1.2",
+    "lint-staged": "^8.0.3",
     "ncp": "^2.0.0",
     "node-sass": "^4.9.4",
     "nodemon": "^1.18.4",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.2.0",
+    "prettier": "^1.14.3",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "sass": "^1.14.3",
     "sass-loader": "^7.1.0",
+    "stylelint": "^9.7.1",
+    "stylelint-config-prettier": "^4.0.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-webpack-plugin": "^0.10.5",
     "url-loader": "^1.1.2",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
@@ -58,6 +78,14 @@
     "express": "^4.16.3",
     "express-art-template": "^1.0.1",
     "pm2": "^3.2.2"
+  },
+  "lint-staged": {
+    "**/*.{js,vue,scss}": [
+      "prettier --write",
+      "git add"
+    ],
+    "**/*.{js,vue,scss}/**/*.{js,vue}": "npm run lint-staged:js",
+    "**/*.scss": "stylelint --syntax scss"
   },
   "browserslist": [
     "> 1%",
