test vue stylelint

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,9 @@
 {
   "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
+  "processors": ["stylelint-processor-html"], 
   "rules": {
+    "function-url-quotes": "always",
+    "no-empty-source": null,
     "selector-pseudo-class-no-unknown": null,
     "shorthand-property-no-redundant-values": null,
     "at-rule-empty-line-before": null,
