--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "build-client": "NODE_ENV=production babel-node ./scripts/build.js target=./dist",
     "start": "pm2 start ./dist/app.js --name mazai-pc",
     "delete": "pm2 delete mazai-pc",
-    "lint": "eslint --ext .js,.vue app.js views scripts middlewares controllers && npm run lint-style",
-    "lint:fix": "eslint --fix --ext .js,.vue app.js views scripts middlewares controllers && npm run lint-style:fix",
-    "lint-style": "stylelint \"views/**/*.scss\" \"views/**/*.vue\" --syntax scss",
-    "lint-style:fix": "stylelint \"views/**/*.scss\" \"views/**/*.vue\" --syntax scss --fix",
+    "lint": "eslint --ext .js,.vue app.js views scripts middlewares controllers",
+    "lint:fix": "eslint --fix --ext .js,.vue app.js views scripts middlewares controllers",
     "lint-staged": "lint-staged",
-    "lint-staged:js": "eslint --ext .js app.js views scripts middlewares controllers",
-    "prettier": "prettier --write ./views/**/*.js ./views/**/*.scss ./controller/**/*.js ./controller/**/*.scss **/*.vue",
+    "lint-staged:js": "eslint --ext .js,.vue app.js views scripts middlewares controllers",
+    "prettier": "prettier --write ./views/**/*.js ./controllers/**/*.js ./views/**/*.vue",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "MNW-FE",
@@ -57,11 +55,6 @@
     "pug-plain-loader": "^1.0.0",
     "sass": "^1.14.3",
     "sass-loader": "^7.1.0",
-    "stylelint": "^9.7.1",
-    "stylelint-config-prettier": "^4.0.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-processor-html": "^1.0.0",
-    "stylelint-webpack-plugin": "^0.10.5",
     "url-loader": "^1.1.2",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
@@ -85,8 +78,7 @@
       "prettier --write",
       "git add"
     ],
-    "**/*.{js,vue,scss}/**/*.{js,vue}": "npm run lint-staged:js",
-    "**/*.{scss,vue}": "stylelint --syntax scss"
+    "**/*.{vue,js}": "npm run lint-staged:js"
   },
   "browserslist": [
     "> 1%",
