--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "build-client": "NODE_ENV=production babel-node ./scripts/build.js target=./dist",
     "start": "pm2 start ./dist/app.js --name mazai-pc",
     "delete": "pm2 delete mazai-pc",
-    "lint": "eslint --ext .js,.vue app.js views scripts middlewares controllers",
-    "lint:fix": "eslint --fix --ext .js,.vue app.js views scripts middlewares controllers",
+    "lint": "eslint --ext .js,.vue views controllers middlewares app.js",
+    "lint:fix": "eslint --fix --ext .js,.vue views controllers middlewares app.js",
     "lint-staged": "lint-staged",
-    "lint-staged:js": "eslint --ext .js,.vue app.js views scripts middlewares controllers",
-    "prettier": "prettier --write ./views/**/*.js ./controllers/**/*.js ./middlewares/**/*.js ./views/**/*.vue app.js",
+    "lint-staged:js": "eslint --ext .js,.vue views controllers middlewares app.js",
+    "prettier": "prettier --write ./views/**/*.js ./views/**/*.vue ./controllers/**/*.js ./middlewares/**/*.js app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "MNW-FE",
