--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "build-client": "NODE_ENV=production babel-node ./scripts/build.js target=./dist",
     "start": "pm2 start ./dist/app.js --name mazai-pc",
     "delete": "pm2 delete mazai-pc",
-    "lint": "eslint --ext .js,.vue app.js views scripts middlewares controllers && npm run lint-style",
-    "lint:fix": "eslint --fix --ext .js,.vue app.js views scripts middlewares controllers && npm run lint-style:fix",
+    "lint": "eslint --ext .js,.vue app.js views controllers && npm run lint-style",
+    "lint:fix": "eslint --fix --ext .js,.vue app.js views controllers && npm run lint-style:fix",
     "lint-style": "stylelint \"views/**/*.scss\" \"views/**/*.vue\" --syntax scss",
     "lint-style:fix": "stylelint \"views/**/*.scss\" \"views/**/*.vue\" --syntax scss --fix",
     "lint-staged": "lint-staged",
-    "lint-staged:js": "eslint --ext .js app.js views scripts middlewares controllers",
+    "lint-staged:js": "eslint --ext .js app.js views controllers",
     "prettier": "prettier --write ./views/**/*.js ./views/**/*.scss ./controller/**/*.js ./controller/**/*.scss **/*.vue",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -38,11 +38,9 @@
     "blueimp-md5": "^2.10.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.8.0",
-    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-vue": "^4.7.1",
     "file-loader": "^2.0.0",
     "fs-extra": "^7.0.0",
