--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,4 +1,7 @@
 {
   "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
-  "processors": ["stylelint-processor-html"]
+  "processors": ["@mapbox/stylelint-processor-arbitrary-tags"],
+  "rules": {
+    "no-empty-source": null
+  }
 }
