--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "delete": "pm2 delete mazai-pc",
     "lint": "eslint --ext .js,.vue app.js views controllers && npm run lint-style",
     "lint:fix": "eslint --fix --ext .js,.vue app.js views controllers && npm run lint-style:fix",
-    "lint-style": "stylelint \"views/**/*.scss\" \"views/**/*.vue\" --syntax scss",
-    "lint-style:fix": "stylelint \"views/**/*.scss\" \"views/**/*.vue\" --syntax scss --fix",
+    "lint-style": "stylelint views/**/*.{scss,vue} --syntax scss",
+    "lint-style:fix": "stylelint views/**/*.{scss,vue} --syntax scss --fix",
     "lint-staged": "lint-staged",
-    "lint-staged:js": "eslint --ext .js app.js views controllers",
-    "prettier": "prettier --write ./views/**/*.js ./views/**/*.scss ./controller/**/*.js ./controller/**/*.scss **/*.vue",
+    "prettier": "prettier --write views/**/*.{js,scss,vue} controllers/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "MNW-FE",
   "devDependencies": {
+    "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
     "autoprefixer": "^9.3.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -58,7 +58,6 @@
     "stylelint": "^9.7.1",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-standard": "^18.2.0",
-    "stylelint-processor-html": "^1.0.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "url-loader": "^1.1.2",
     "vue-loader": "^15.4.2",
