启用配置文件来管理pm2

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "scripts": {
     "precommit": "npm run lint-staged",
     "dev": "concurrently \"npm:node-dev\" \"npm:sassc-dev\"",
-    "node-dev": "nodemon ./app.js env=development --exec babel-node",
-    "sassc-dev": "babel-node scripts/build-sass.js env=development",
+    "node-dev": "NODE_ENV=development nodemon ./app.js --exec babel-node",
+    "sassc-dev": "NODE_ENV=developmentbabel-node scripts/build-sass.js",
     "sassc": "babel-node scripts/build-sass.js",
     "clean": "babel-node scripts/clean-build.js target=./dist",
     "build": "npm run clean && npm run build-server && npm run sassc && npm run build-client",
-    "build-server": "babel ./ -d dist --ignore node_modules,views,scripts,postcss.config.js",
+    "build-server": "babel ./ -d dist --ignore node_modules,views,scripts,*.config.js",
     "build-client": "NODE_ENV=production babel-node ./scripts/build.js target=./dist",
-    "start": "pm2 start ./dist/app.js --name mazai-pc",
+    "start": "pm2 start ecosystem.config.js --env production",
     "delete": "pm2 delete mazai-pc",
     "lint": "eslint --ext .js,.vue app.js views controllers && npm run lint-style",
     "lint:fix": "eslint --fix --ext .js,.vue app.js views controllers && npm run lint-style:fix",
