--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "precommit": "npm run lint-staged",
     "dev": "concurrently \"npm:node-dev\" \"npm:sassc-dev\"",
     "node-dev": "NODE_ENV=development nodemon ./app.js --exec babel-node",
-    "sassc-dev": "NODE_ENV=developmentbabel-node scripts/build-sass.js",
+    "sassc-dev": "NODE_ENV=development babel-node scripts/build-sass.js",
     "sassc": "babel-node scripts/build-sass.js",
     "clean": "babel-node scripts/clean-build.js target=./dist",
     "build": "npm run clean && npm run build-server && npm run sassc && npm run build-client",
@@ -68,12 +68,15 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "art-template": "^4.13.1",
     "chokidar": "^2.0.4",
     "concurrently": "^4.0.1",
     "express": "^4.16.3",
     "express-art-template": "^1.0.1",
+    "log4js": "^3.0.6",
     "pm2": "^3.2.2",
+    "pm2-intercom": "^1.0.0",
     "vue": "^2.5.17",
     "webpack": "^4.23.1"
   },
