--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "scripts": {
     "precommit": "npm run lint-staged",
     "dev": "concurrently \"npm:node-dev\" \"npm:sassc-dev\"",
-    "node-dev": "NODE_ENV=development nodemon ./app.js --exec babel-node",
-    "sassc-dev": "NODE_ENV=development babel-node scripts/build-sass.js",
+    "node-dev": "cross-env NODE_ENV=development nodemon ./app.js --exec babel-node",
+    "sassc-dev": "cross-env NODE_ENV=development babel-node scripts/build-sass.js",
     "sassc": "babel-node scripts/build-sass.js",
     "clean": "babel-node scripts/clean-build.js target=./dist",
     "build": "npm run clean && npm run build-server && npm run sassc && npm run build-client",
     "build-server": "babel ./ -d dist --ignore node_modules,views,scripts,*.config.js",
-    "build-client": "NODE_ENV=production babel-node ./scripts/build.js target=./dist",
+    "build-client": "cross-env NODE_ENV=production babel-node ./scripts/build.js target=./dist",
     "start": "pm2 start ecosystem.config.js --env production",
     "delete": "pm2 delete mazai-pc",
     "lint": "eslint --ext .js,.vue app.js views controllers && npm run lint-style",
@@ -36,6 +36,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "blueimp-md5": "^2.10.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.8.0",
     "eslint-config-prettier": "^3.1.0",
@@ -77,6 +78,8 @@
     "log4js": "^3.0.6",
     "pm2": "^3.2.2",
     "pm2-intercom": "^1.0.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
     "vue": "^2.5.17",
     "webpack": "^4.23.1"
   },
