--- a/package.json
+++ b/package.json
@@ -95,5 +95,10 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
+  ],
+  "nodemonignore": [
+    "./views/**/*.js", 
+    "!./views/**/art-es6.js",
+    "!./views/**/vue-entry.js"
   ]
 }
