--- a/package.json
+++ b/package.json
@@ -30,10 +30,9 @@
     "autoprefixer": "^9.3.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "blueimp-md5": "^2.10.0",
     "cross-env": "^5.2.0",
@@ -45,7 +44,6 @@
     "eslint-plugin-vue": "^4.7.1",
     "file-loader": "^2.0.0",
     "fs-extra": "^7.0.0",
-    "gulp": "^3.9.1",
     "husky": "^1.1.2",
     "lint-staged": "^8.0.3",
     "ncp": "^2.0.0",
@@ -69,8 +67,8 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
     "art-template": "^4.13.1",
+    "babel-runtime": "^6.26.0",
     "chokidar": "^2.0.4",
     "concurrently": "^4.0.1",
     "express": "^4.16.3",
