--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "build-server": "babel ./ -d dist --ignore node_modules,views,scripts,*.config.js",
     "build-client": "cross-env NODE_ENV=production babel-node ./scripts/build.js target=./dist",
     "start": "pm2 start ecosystem.config.js --env production",
+    "start:test": "pm2 start ecosystem.config.js --env test",
     "delete": "pm2 delete mazai-pc",
     "lint": "eslint --ext .js,.vue app.js views controllers && npm run lint-style",
     "lint:fix": "eslint --fix --ext .js,.vue app.js views controllers && npm run lint-style:fix",
-    "lint-style": "stylelint views/**/*.{scss,vue} --syntax scss",
-    "lint-style:fix": "stylelint views/**/*.{scss,vue} --syntax scss --fix",
+    "lint-style": "stylelint \"views/**/*.{scss,vue}\"",
+    "lint-style:fix": "stylelint \"views/**/*.{scss,vue}\" --fix",
     "lint-staged": "lint-staged",
-    "prettier": "prettier --write views/**/*.{js,scss,vue} controllers/**/*.js",
+    "prettier": "prettier --write \"views/**/*.{js,scss,vue}\" \"controllers/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "MNW-FE",
   "devDependencies": {
-    "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
     "autoprefixer": "^9.3.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -60,6 +60,7 @@
     "stylelint": "^9.7.1",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-standard": "^18.2.0",
+    "stylelint-order": "^2.0.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "url-loader": "^1.1.2",
     "vue-loader": "^15.4.2",
@@ -85,12 +86,12 @@
     "webpack": "^4.23.1"
   },
   "lint-staged": {
-    "**/*.{js,vue,scss}": [
+    "**/*.{vue,js,scss}": [
       "prettier --write",
+      "eslint --fix",
+      "stylelint --fix",
       "git add"
-    ],
-    "**/*.{js,vue}": "eslint --ext .js,.vue",
-    "**/*.{scss,vue}": "stylelint --syntax scss"
+    ]
   },
   "browserslist": [
     "> 1%",
