--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mazai-demo",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
   "private": true,
   "main": "app.js",
@@ -14,11 +14,15 @@
     "build": "npm run clean && npm run build-server && npm run sassc && npm run build-client",
     "build-server": "babel ./ -d dist --ignore node_modules,views,scripts,*.config.js",
     "build-client": "cross-env NODE_ENV=production babel-node ./scripts/build.js target=./dist",
-    "start": "pm2 start ecosystem.config.js --env production",
-    "restart": "pm2 restart ecosystem.config.js --env production",
-    "start:test": "pm2 start ecosystem.config.js --env test",
-    "restart:test": "pm2 restart ecosystem.config.js --env test",
-    "delete": "pm2 delete mazai-pc",
+    "start:test": "pm2 start ecosystem.config.js --only mazai-demo-test",
+    "restart:test": "pm2 restart ecosystem.config.js --only mazai-demo-test",
+    "delete:test": "pm2 delete mazai-demo-test",
+    "start:rc": "pm2 start ecosystem.config.js --only mazai-demo-rc",
+    "restart:rc": "pm2 restart ecosystem.config.js --only mazai-demo-rc",
+    "delete:rc": "pm2 delete mazai-demo-rc",
+    "start": "pm2 start ecosystem.config.js --only mazai-demo",
+    "restart": "pm2 restart ecosystem.config.js --only mazai-demo",
+    "delete": "pm2 delete mazai-demo",
     "lint": "eslint --ext .js,.vue app.js views controllers && npm run lint-style",
     "lint:fix": "eslint --fix --ext .js,.vue app.js views controllers && npm run lint-style:fix",
     "lint-style": "stylelint \"views/**/*.{scss,vue}\"",
