--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": [["env", { "modules": false }], "stage-2"],
+  "presets": [["env"], "stage-2"],
   "env": {
     "test": {
       "presets": [["env", { "targets": { "node": "current" } }], "stage-2"]
