--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "prettier": "^1.14.3",
     "sass": "^1.14.3",
     "sass-loader": "^7.1.0",
+    "sinon": "^7.2.2",
     "stylelint": "^9.7.1",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-standard": "^18.2.0",
