--- a/package.json
+++ b/package.json
@@ -32,10 +32,21 @@
     "lint-style:fix": "stylelint \"views/**/*.{scss,vue}\" --fix",
     "lint-staged": "lint-staged",
     "prettier": "prettier --write \"views/**/*.{js,scss,vue}\" \"controllers/**/*.js\"",
-    "test": "jest --config jest.config.js"
+    "test": "jest --config jest.config.js",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "build-storybook": "build-storybook"
   },
   "author": "MNW-FE",
   "devDependencies": {
+    "@storybook/addon-actions": "^4.1.6",
+    "@storybook/addon-backgrounds": "^4.1.6",
+    "@storybook/addon-knobs": "^4.1.6",
+    "@storybook/addon-links": "^4.1.6",
+    "@storybook/addon-notes": "^4.1.6",
+    "@storybook/addon-options": "^4.1.6",
+    "@storybook/addon-storysource": "^4.1.6",
+    "@storybook/addon-viewport": "^4.1.6",
+    "@storybook/vue": "^4.1.6",
     "@vue/test-utils": "^1.0.0-beta.28",
     "autoprefixer": "^9.3.1",
     "babel-cli": "^6.26.0",
@@ -48,6 +59,7 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-vue": "^2.0.2",
     "blueimp-md5": "^2.10.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
@@ -60,6 +72,7 @@
     "fs-extra": "^7.0.0",
     "husky": "^1.1.2",
     "jest": "^23.6.0",
+    "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^8.0.3",
     "ncp": "^2.0.0",
     "node-sass": "^4.9.4",
