--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mazai-demo",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "",
   "private": true,
   "main": "app.js",
@@ -12,7 +12,7 @@
     "sassc": "babel-node scripts/build-sass.js",
     "clean": "babel-node scripts/clean-build.js target=./dist",
     "build": "npm run clean && npm run build-server && npm run sassc && npm run build-client",
-    "build-server": "babel ./ -d dist --ignore node_modules,views,scripts,*.config.js",
+    "build-server": "babel ./ -d dist --ignore node_modules,views,scripts,tests,stories,*.config.js",
     "build-client": "cross-env NODE_ENV=production babel-node ./scripts/build.js target=./dist",
     "start:test": "pm2 start ecosystem.config.js --only mazai-demo-test",
     "restart:test": "pm2 restart ecosystem.config.js --only mazai-demo-test",
